--- a/po/gl.po
+++ b/po/gl.po
@@ -1,6 +1,6 @@
 # Galician translation of yelp.
-# Copyright (C) 1999-2002 Jesús Bravo Álvarez
-# Jesús Bravo Álvarez <suso@trasno.net>, 1999-2002.
+# Copyright (C) 2002-2004 Jesús Bravo Álvarez
+# Jesús Bravo Álvarez <suso@trasno.net>, 2002-2004.
 #
 # Proxecto Trasno - Adaptación do software libre á lingua galega:  Se desexas
 # colaborar connosco, podes atopar máis información en http://www.trasno.net
@@ -10,137 +10,127 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-03-22 17:51-0600\n"
-"PO-Revision-Date: 2002-06-11 12:16+0200\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-09-10 20:20+0200\n"
+"PO-Revision-Date: 2004-10-02 12:01+0200\n"
 "Last-Translator: Jesús Bravo Álvarez <suso@trasno.net>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
+"Plural-Forms: nplurals=2; plural=(n!=1)\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Aplicacións"
+msgstr "Applets"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Aplicacións"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Escritorio"
+msgstr "Escritorio"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Desenvolvemento"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Desenvolvemento"
+msgstr "Ambientes de desenvolvemento"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Desenvolvemento"
+msgstr "Ferramentas de desenvolvemento"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
 msgid "Editors"
-msgstr ""
+msgstr "Editores"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Aplicacións"
+msgstr "Aplicacións educativas"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Xogos e entretementos"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Xeral"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Contidos da axuda"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Aplicacións"
+msgstr "Aplicacións de Internet"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Rotinas do núcleo"
+msgstr "Kernels"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Aplicacións"
+msgstr "Aplicacións multimedia"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Aplicacións de oficina e produtividade"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Aplicacións"
+msgstr "Aplicacións científicas"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Seguranza"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Chamadas ao sistema"
+msgstr "Sistema"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Utilidades"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Aplicacións"
+msgstr "Aplicacións X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "_Distinguir maiúsc/minúsc"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Procurar"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Procurar: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
-msgstr ""
+msgstr "_Seguinte"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Previous"
-msgstr ""
+msgstr "_Anterior"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Voltar ao inicio"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -150,65 +140,60 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Fábrica Yelp"
 
-#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:438 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Non se atopou o atributo href en yelp:document"
 
-#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:453 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Memoria insuficiente"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:641 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Páxina de título"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
-#: src/yelp-man-pager.c:372
-#, fuzzy
+#: src/yelp-db-pager.c:643 src/yelp-man-pager.c:372
+#: stylesheets/l10n.xml.in.h:30
 msgid "Contents"
-msgstr "Contidos da axuda"
+msgstr "Contidos"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
-#: src/yelp-man-pager.c:390
+#: src/yelp-db-pager.c:661 src/yelp-man-pager.c:390
+#: stylesheets/l10n.xml.in.h:69
 msgid "Unknown"
-msgstr ""
+msgstr "Descoñecido"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "O documento '%s' non existe"
+msgstr "Non se puido abrir o documento seleccionado"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "O documento '%s' non existe"
+msgstr "A páxina seleccionada non se atopou neste documento."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "O documento '%s' non existe"
+msgstr "Non se puido ler a táboa de contidos."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Os documento SGML DocBook xa non están soportados."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "O documento '%s' non existe"
+msgstr "Non se puido ler o ficheiro seleccionado."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr ""
+msgstr "Definir que directorio de caché utilizar"
 
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Non foi posible activar o Yelp: '%s'"
+msgstr "Non se puido activar o Yelp: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "Non foi posible abrir unha nova fiestra."
+msgstr "Non se puido abrir unha nova fiestra."
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -272,28 +257,27 @@ msgid "System Administration"
 msgstr "Administración do sistema"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Documentos"
+msgstr "URI do documento"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "O URI do documento para procesar"
 
-#: src/yelp-toc-pager.c:266
+#: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: A conta de pausas é negativa."
 
-#: src/yelp-toc-pager.c:486
-#, fuzzy, c-format
+#: src/yelp-toc-pager.c:487
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Non foi posible activar o Yelp: '%s'"
+msgstr "Non se puido cargar o ficheiro OMF '%s'."
 
-#: src/yelp-toc-pager.c:883
+#: src/yelp-toc-pager.c:884
 msgid "Categories"
 msgstr "Categorías"
 
-#: src/yelp-toc-pager.c:897
+#: src/yelp-toc-pager.c:898
 msgid "Documents"
 msgstr "Documentos"
 
@@ -311,19 +295,19 @@ msgstr "/Ficheiro/_Pechar fiestra"
 
 #: src/yelp-window.c:257
 msgid "/_Edit"
-msgstr ""
+msgstr "/_Editar"
 
 #: src/yelp-window.c:258
 msgid "/Edit/_Find..."
-msgstr ""
+msgstr "/Editar/_Procurar..."
 
 #: src/yelp-window.c:261
 msgid "/Edit/Find Ne_xt"
-msgstr ""
+msgstr "/Editar/Procurar _seguinte"
 
 #: src/yelp-window.c:264
 msgid "/Edit/Find Pre_vious"
-msgstr ""
+msgstr "/Editar/Procurar _anterior"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -342,23 +326,20 @@ msgid "/Go/_Home"
 msgstr "/Ir/_Inicio"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Ir"
+msgstr "/Ir"
 
 #: src/yelp-window.c:279
 msgid "/Go/_Previous Page"
-msgstr ""
+msgstr "/Ir/Páxina _anterior"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Ir/Í_ndice"
+msgstr "/Ir/Páxina _seguinte"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Contidos da axuda"
+msgstr "/Ir/_Contidos"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -406,174 +387,171 @@ msgstr "Cargando..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1300
+#: src/yelp-window.c:1304
 msgid "translator_credits"
 msgstr ""
 "Jesús Bravo Álvarez <suso@trasno.net>\n"
 "Proxecto Trasno - http://www.trasno.net"
 
-#: src/yelp-window.c:1306
-#, fuzzy
+#: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
-msgstr "Navegador de axuda de GNOME 2.0"
+msgstr "Navegador de axuda de GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "Acerca deste artigo"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Acerca desta bibliografía"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "Acerca deste libro"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "Acerca deste capítulo"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "Acerca desta entrada"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "Acerca deste glosario"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "Acerca deste índice"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "Acerca desta parte"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "Acerca deste prefacio"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "Acerca desta referencia"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "Acerca desta sección"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "Acerca deste conxunto"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "Aplicacións"
+msgstr "Afiliación"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "Apéndice"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "Artigo"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "Audiencia"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "Autores"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "Bibliografía"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "Libro"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "Advertencia"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "Capítulo"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "Colaborador"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "Colaboradores"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Notas finais"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "Copyright"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "Copyrights"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "Data"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "Sección"
+msgstr "Dedicatoria"
 
 #: stylesheets/l10n.xml.in.h:35
 msgid "Editor"
-msgstr ""
+msgstr "Editor"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "Exemplo"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "Figura"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "Glosario"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "Importante"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -581,109 +559,107 @@ msgstr "Índice"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "Nota legal"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "Nivel"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "Audiencia da mensaxe"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "Nivel da mensaxe"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "Orixe da mensaxe"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "Nota"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "Orixe"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "Outro contribuidor"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "Outros contribuidores"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "Parte"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "Prefacio"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "Publicador"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "Publicadores"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "Referencia"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "Entrada de referencia"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "Sección de referencia"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "Información de publicación"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "Historia de revisións"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "Ver"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "Ver tamén"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "Índice"
+msgstr "Definir índice"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "Táboa"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "Contidos da axuda"
+msgstr "Táboa de contidos"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "Consello"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "Aviso"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -692,36 +668,3 @@ msgstr "Obter axuda con GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Axuda"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "O documento '%s' non existe"
-
-#, fuzzy
-#~ msgid "_Search for:"
-#~ msgstr "Procurar:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Escritorio"
-
-#~ msgid "Additional documents"
-#~ msgstr "Documentos adicionais"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Páxinas de manual"
-
-#~ msgid "Info Pages"
-#~ msgstr "Páxinas Info"
-
-#~ msgid "Manual pages"
-#~ msgstr "Páxinas de manual"
-
-#, fuzzy
-#~ msgid "GNOME is"
-#~ msgstr "GNOME - Escritorio"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Cargando..."
-
-#~ msgid "Search in the index"
-#~ msgstr "Procurar no índice"
