--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-03  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-10-02  Jesus Bravo Alvarez  <suso@trasno.net>
 
 	* gl.po: Updated Galician translation.
