--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-07  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-10-03  David Lodge <dave@cirt.net>
                                                                                 
         * en_GB.po: Updated British English translation.
