--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-10-10  Shaun McCance  <shaunm@gnome.org>
+
+	* src/Makefile.am:
+	* src/yelp-history.c:
+	* src/yelp-history.h:
+	* src/yelp-window.c:
+	- Removed yelp-history, using a simple stack in yelp-window
+
 2004-10-08  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
