--- a/po/fa.po
+++ b/po/fa.po
@@ -1,115 +1,103 @@
-# translation of yelp to to Persian
-# Copyright (C) 2002 The FarsiWeb Project Group
-# Roozbeh Pournader <roozbeh@sharif.edu>, 2002
-#
+# Translation of yelp to to Persian.
+# Copyright (C) 2002, 2004 Sharif FarsiWeb, Inc.
+# Roozbeh Pournader <roozbeh@farsiweb.info>, 2002.
+# Meelad Zakaria <meelad@bamdad.org>, 2004.
+
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp\n"
+"Project-Id-Version: yelp HEAD\n"
 "POT-Creation-Date: 2004-03-22 17:51-0600\n"
-"PO-Revision-Date: 2003-03-17 23:17+0330\n"
-"Last-Translator: Roozbeh Pournader <roozbeh@sharif.edu>\n"
+"PO-Revision-Date: 2004-10-22 15:17+0330\n"
+"Last-Translator: Meelad Zakaria <meelad@bamdad.org>\n"
 "Language-Team: Persian <farsi@lists.sharif.edu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 0.9.6\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "برنامه‌ها"
+msgstr "برنامک‌ها"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "برنامه‌ها"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "گنوم - رومیزی"
+msgstr "رومیزی"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "برنامه‌سازی"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "برنامه‌سازی"
+msgstr "محیط‌های برنامه‌سازی"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "برنامه‌سازی"
+msgstr "ابزارهای برنامه‌سازی"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/ویرایش"
+msgstr "ویرایشگرها"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "برنامه‌ها"
+msgstr "برنامه‌های آموزشی"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "بازی‌ها و سرگرمی"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "عمومی"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "محتویات راهنما"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "برنامه‌ها"
+msgstr "برنامه‌های اینترنتی"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "روال‌های هسته"
+msgstr "هسته‌ها"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "برنامه‌ها"
+msgstr "برنامه‌های چندرسانه‌ای"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "برنامه‌های دفتری و بهره‌وری"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "برنامه‌ها"
+msgstr "برنامه‌های علمی"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "امنیتی"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "فراخوانی‌های سیستمی"
+msgstr "سیستم"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
 msgstr ""
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "برنامه‌ها"
+msgstr "برنامه‌های X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -117,27 +105,27 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "_حساس به بزرگی و کوچکی حروف"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "یافتن"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_یافتن: "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
-msgstr "بعدی"
+msgstr "_بعدی"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Previous"
-msgstr "قبلی"
+msgstr "_قبلی"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_دور کامل"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -149,54 +137,49 @@ msgstr "کارخانه‌ی یلپ"
 
 #: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "مشخصه‌ی href در یلپ:نوشتار پیدا نشد"
 
 #: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "خارج از حافظه"
 
 #: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "صفحه‌ی عنوان"
 
 #: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
 #: src/yelp-man-pager.c:372
-#, fuzzy
 msgid "Contents"
-msgstr "محتویات راهنما"
+msgstr "محتویات"
 
 #: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
 #: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "ناشناخته"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "نوشتار '%s' وجود ندارد"
+msgstr "باز کردن نوشتار انتخاب شده ممکن نیست"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "نوشتار '%s' وجود ندارد"
+msgstr "صفحه‌ی انتخاب شده در این نوشتار پیدا نشد."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "نوشتار '%s' وجود ندارد"
+msgstr "خواندن فهرست مندرجات ممکن نیست."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "نوشتارهای DocBook SGML دیگر پیشتیبانی نمی‌شوند."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "نوشتار '%s' وجود ندارد"
+msgstr "خواندن پرونده‌ی انتخاب شده ممکن نیست."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
-msgstr ""
+msgstr "تعیین کنید از کدام شاخه‌ی حافظه‌ی نهان استفاده شود"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -269,13 +252,12 @@ msgid "System Administration"
 msgstr "مدیریت سیستم"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "نوشتارها"
+msgstr "URI نوشتار"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "URI نوشتاری که باید پردازش شود"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
@@ -296,74 +278,67 @@ msgstr "نوشتارها"
 
 #: src/yelp-window.c:249
 msgid "/_File"
-msgstr "/پرونده"
+msgstr "/_پرونده"
 
 #: src/yelp-window.c:250
 msgid "/File/_New window"
-msgstr "/پرونده/پنجره‌ی جدید"
+msgstr "/پرونده/پنجره‌ی _جدید"
 
 #: src/yelp-window.c:253
 msgid "/File/_Close window"
-msgstr "/پرونده/بستن پنجره"
+msgstr "/پرونده/_بستن پنجره"
 
 #: src/yelp-window.c:257
 msgid "/_Edit"
-msgstr "/ویرایش"
+msgstr "/_ویرایش"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/ویرایش/یافتن در صفحه..."
+msgstr "/ویرایش/_یافتن..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/ویرایش/یافتن مجدد"
+msgstr "/ویرایش/یافتن _بعدی"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/ویرایش/یافتن مجدد"
+msgstr "/ویرایش/یافتن _قبلی"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
-msgstr "/رفتن"
+msgstr "/_رفتن"
 
 #: src/yelp-window.c:269
 msgid "/Go/_Back"
-msgstr "/رفتن/به عقب"
+msgstr "/رفتن/به _عقب"
 
 #: src/yelp-window.c:272
 msgid "/Go/_Forward"
-msgstr "/رفتن/به جلو"
+msgstr "/رفتن/به _جلو"
 
 #: src/yelp-window.c:275
 msgid "/Go/_Home"
-msgstr "رفتن/به آغازه"
+msgstr "رفتن/به آ_غازه"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/رفتن"
+msgstr "/رفتن/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "قبلی"
+msgstr "/رفتن/صفحه‌ی _قبل"
 
 #: src/yelp-window.c:282
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/رفتن/به نمایه"
+msgstr "/رفتن/صفحه‌ی _قبل"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "محتویات راهنما"
+msgstr "/رفتن/_محتویات"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
-msgstr "/راهنما"
+msgstr "/_راهنما"
 
 #: src/yelp-window.c:290
 msgid "/Help/_About"
@@ -412,9 +387,8 @@ msgid "translator_credits"
 msgstr "روزبه پورنادر ‎<roozbeh@sharif.edu>‎"
 
 #: src/yelp-window.c:1306
-#, fuzzy
 msgid "A Help Browser for GNOME"
-msgstr "مرورگر راهنماها برای گنوم ۲.۰"
+msgstr "یک مرورگر راهنماها برای گنوم"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
@@ -434,100 +408,99 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "درباره‌ی این مقاله"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "درباره‌ی این کتاب‌شناسی"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "درباره‌ی این کتاب"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "درباره‌ی این فصل"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "درباره‌ی این مدخل"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "درباره‌ی این واژه‌نامه"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "درباره‌ی این نمایه"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "درباره‌ی این قسمت"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "درباره‌ی این پیش‌گفتار"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "درباره‌ی این مرجع"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "درباره‌ی این بخش"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "درباره‌ی این مجموعه"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "برنامه‌ها"
+msgstr "عضویت"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "پیوست"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "مقاله"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "خوانندگان"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "مؤلف"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "مؤلفان"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "کتاب‌شناسی"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "کتاب"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "احتیاط"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "فصل"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "همکار"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "همکاران"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
@@ -535,45 +508,44 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "کپی‌رایت"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "کپی‌رایت‌ها"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "تاریخ"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "قسمت"
+msgstr "اهدا"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
+
 msgid "Editor"
-msgstr "/ویرایش"
+msgstr "ویرایشگر"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "پست الکترونیکی"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "مثال"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "رقم"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "واژه‌نامه"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "مهم"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -581,79 +553,79 @@ msgstr "نمایه"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "تذکر حقوقی"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "سطح"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "خوانندگان پیغام"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "سطح پیغام"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "منشاء پیغام"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "تذکر"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "منشاء"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "همکار دیگر"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "همکاران دیگر"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "قسمت"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "پیش‌گفتار"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "ناشر"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "ناشران"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "مرجع"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "مدخل مرجع"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "بخش مرجع"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "اطلاعات انتشار"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "تاریخچه‌ی تجدید نظر"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "ببینید"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
@@ -666,12 +638,11 @@ msgstr "نمایه"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "جدول"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "محتویات راهنما"
+msgstr "فهرست"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
@@ -679,11 +650,11 @@ msgstr ""
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "عنوان"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "اخطار"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
