--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-20  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Sorted and added missing files.
+	* sv.po: Updated Swedish translation.
+
 2004-12-19  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
